# generative-models

./: .gitignore  .pre-commit-config.yaml  3 Fakta gila luar angkasa  AI_interference.py  CODEOWNERS  Dgre  LICENSE  LICENSE-CODE  Makefile  README.md  main.py  minimal-demo.ipynb  pyproject.toml  pytest.ini  requirements-demo-minimal.txt  requirements-demo-streamlit.txt  requirements.in  requirements_pt13.txt  requirements_pt2.txt  setup.py  squeege  txt2img.py
.devcontainer/: devcontainer.json
.devcontainer/pytorch-1.13+cu117/: devcontainer.json
.devcontainer/pytorch-2.0+cu118/: devcontainer.json
.github/workflows/: black.yml  lint.yml  test-build.yaml  test-inference.yml
checkpoints/: .gitignore
configs/example_training/: imagenet-f8_cond.yaml  txt2img-clipl-legacy-ucg-training.yaml  txt2img-clipl.yaml
configs/inference/: sd_2_1.yaml  sd_2_1_768.yaml  sd_xl_base.yaml  sd_xl_refiner.yaml  sv3d_p.yaml  sv3d_p_image_decoder.yaml  sv3d_u.yaml  svd.yaml  svd_image_decoder.yaml
ldm/: __init__.py  util.py
ldm/data/: __init__.py  dataset.py
ldm/models/: __init__.py  autoencoder.py  diffusion.py
ldm/modules/: __init__.py  attention.py
model_licenses/: LICENCE-SD-Turbo  LICENSE-SDV  LICENSE-SDXL1.0  LICENSE-SV3D
requirements/: demo-minimal.txt  demo-streamlit.txt  pt13.txt  pt2.txt  requirements.in  requirements.txt  zhengxj_env.txt
scripts/: Dockerfile.compile-requirements  cuda-version.sh
scripts/demo/: detect.py  discretization.py  gradio_app.py  gradio_app_sv4d.py  sampling.py  streamlit_helpers.py  (+6 more)
sgm/: __init__.py  lr_scheduler.py  util.py
(+87 files in other folders)
